refactor(cleanup): 处理 S8688/S6204/S1612/S6201/S5786/S8714/S4449/S1948/S1192 等批量规则