@@ -5,7 +5,6 @@ import com.fasterxml.jackson.annotation.JsonInclude;
 import lombok.Data;
 
 import java.util.List;
-import java.util.stream.Collectors;
 
 @Data
 @JsonInclude(JsonInclude.Include.NON_NULL)
@@ -34,7 +33,7 @@ public class MenuItem implements Cloneable {
             if (this.children != null) {
                 clone.children = this.children.stream()
                         .map(MenuItem::clone)
-                        .collect(Collectors.toList());
+                        .toList();
             }
             return clone;
         } catch (CloneNotSupportedException e) {
